# plugbase

./: .gitignore  CMakeLists.txt  README.md  rename.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  juceDevMock.ts  main.css  main.tsx
